overflow bug fixed

--- a/src/assets/style/mainPage/mainPage.css
+++ b/src/assets/style/mainPage/mainPage.css
@@ -73,9 +73,6 @@ main {
 }
 
 @media (min-width: 970px) {
-    body{
-        overflow-y: hidden;
-    }
     main {
         display: grid;
         height: 750px;
